--- a/index.html
+++ b/index.html
@@ -5,8 +5,152 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <!-- CSS Files -->
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/skins/color-1.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
+<!-- Main container start -->
+<div class="main-container">
+  <!-- aside start -->
+  <div class="aside">
+    <div class="logo">
+      <a href="#"><span>t</span>hadz</a>
+    </div>
+    <div class="nav-togler">
+      <span></span>
+    </div>
+    <ul class="nav">
+<li><a href="#" class="active"><i class="fa fa-home"></i> Home</a></li>
+<li><a href="#"><i class="fa fa-user"></i>About</a></li>
+<li><a href="#"><i class="fa fa-list"></i>Service</a></li>
+<li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+<li><a href="#"><i class="fa fa-comments"></i>Contacts</a></li>
+
+    </ul>
+  </div>
+  <!-- aside end -->
+  <!-- main content start -->
+<div class="main-content">
+  <!-- home section start -->
+<section class="home section hidden">
+  <div class="container">
+    <div class="row">
+      <div class="home-info padd-15">
+        <h3 class="hello">hello, my name is <span class="name">thadz</span></h3>
+        <h3 class="my-professsion">
+          I'm a <span class="typing"> web designer</span>
+        </h3>
+        <p>I'm a web designer with experience for 1 year. my expertise is t create and design website. graphic design and many more...</p>
+        <a href="#contact" class="btn hire-me"> Hire Me</a>
+      </div>
+      <div class="home-img padd-15">
+        <img src="./image/profile2.jpeg.jpg" alt="">
+      </div>
+    </div>
+  </div>
+</section>
+  <!-- home section end -->
+    <!-- about section start -->
+    <section class="about section">
+      <div class="container">
+        <div class="row">
+          <div class="section-title padd-15">
+            <h2>About Me</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="about-content padd-15">
+            <div class="row">
+              <div class="about-txt padd-15">
+                <h3>I'm Thadeus Bayonito <span>Web Developer</span></h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore blanditiis quo dignissimos, tempore nostrum illo beatae ad vero ducimus minima qui libero ipsum dolor mollitia, ipsam perspiciatis error laudantium pariatur obcaecati nisi doloribus. Vel esse sed voluptatum similique tempora qui!</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="personal-info padd-15"><div class="row">
+                <div class="info-item padd-15">
+                  <p>Birthday : <span>29 May 1987</span></p>
+                </div>
+                <div class="info-item padd-15">
+                  <p>Age : <span>35</span></p>
+                </div>
+                <div class="info-item padd-15">
+                  <p>Website : <span>www.domain.com</span></p>
+                </div>
+                <div class="info-item padd-15">
+                  <p>Email : <span>Thadzbayonito00@gmail.com</span></p>
+                </div>
+                <div class="info-item padd-15">
+                  <p>Degree : <span>CS</span></p>
+                </div>
+                <div class="info-item padd-15">
+                  <p>Phone : <span>0951 917 9743</span></p>
+                </div>
+                <div class="info-item padd-15">
+                  <p>City : <span>Brgy. Cupang-East Muntinlupa City</span></p>
+                </div>
+                <div class="info-item padd-15">
+                  <p>Freelance : <span>Available</span></p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="buttons padd-15">
+                  <a href="#" class="btn">Download CV</a>
+                  <a href="#contact" class="btn hire-me">Hire Me</a>
+                </div>
+              </div>
+            </div>
+              <div class="skills padd-15">
+                <div class="row">
+                  <div class="skill-item pad-15">
+                    <h5>CSS3</h5>
+                    <div class="progress">
+                      <div class="progress-in" style="width: 75%;"></div>
+                      <div class="skill-percent">75%</div>
+                    </div>
+                  </div>
+                  <div class="skill-item pad-15">
+                    <h5>HTML5</h5>
+                    <div class="progress">
+                      <div class="progress-in" style="width: 96%;"></div>
+                      <div class="skill-percent">75%</div>
+                    </div>
+                  </div>
+                  <div class="skill-item pad-15">
+                    <h5>JS</h5>
+                    <div class="progress">
+                      <div class="progress-in" style="width: 60%;"></div>
+                      <div class="skill-percent">60%</div>
+                    </div>
+                  </div>
+                  <div class="skill-item pad-15">
+                    <h5>PHP</h5>
+                    <div class="progress">
+                      <div class="progress-in" style="width: 50%;"></div>
+                      <div class="skill-percent">50%</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- about section end -->
+</div>
+  <!-- main content end -->
+</div>
+<!-- Main container end -->
   
+
+
+  <!-- JS Files -->
+  <script src="js/script.js"></script>
 </body>
+<section>
+
+</section>
 </html>
