--- a/index.html
+++ b/index.html
@@ -172,6 +172,37 @@
               </div>
               <div class="experience padd-15">
                 <h3 class="title">experience</h3>
+                <div class="row">
+                  <div class="time-line-box padd-15">
+                    <div class="timeline shadow-dark">
+                      <!-- timeline item -->
+                      <div class="timeline-item">
+                        <div class="circle-dot"></div>
+                          <h3 class="timeline-date">
+                            <i class="fa fa-calendar"> 2022 - present</i>
+                          </h3>
+                          <h4 class="timeline-title">Master in Computer Science</h4>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, vero ut, veritatis quae laborum eligendi officiis commodi est nobis expedita tempore dolorem numquam explicabo voluptate deserunt, ea nulla quos iste!</p>
+                      </div>
+                      <div class="timeline-item">
+                        <div class="circle-dot"></div>
+                          <h3 class="timeline-date">
+                            <i class="fa fa-calendar"> 2022 - present</i>
+                          </h3>
+                          <h4 class="timeline-title">Master in Computer Science</h4>
+                          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum nam magnam eaque incidunt vero, eum doloremque maiores vel consequatur saepe quisquam et praesentium ipsum ullam dolorem aliquid rerum consequuntur quidem!</p>
+                      </div>
+                      <div class="timeline-item">
+                        <div class="circle-dot"></div>
+                          <h3 class="timeline-date">
+                            <i class="fa fa-calendar"> 2022 - present</i>
+                          </h3>
+                          <h4 class="timeline-title">Master in Computer Science</h4>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ad pariatur eum quae voluptatem eos, nemo repellat ratione veritatis. Nihil recusandae itaque eos quibusdam nesciunt laborum excepturi illum harum aut!</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
