--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </section>
   <!-- home section end -->
     <!-- about section start -->
-    <section class="about section">
+    <section class="about section hidden">
       <div class="container">
         <div class="row">
           <div class="section-title padd-15">
@@ -210,6 +210,85 @@
       </div>
     </section>
     <!-- about section end -->
+    <!-- service section start -->
+    <section class="service section">
+      <div class="container">
+        <div class="row">
+          <div class="section-title">
+            <h2>services</h2>
+          </div>
+        </div>
+        <div class="row">
+          <!-- service item start -->
+          <div class="service-item">
+            <div class="service-item-inner padd-15">
+              <div class="icon">
+                <i class="fa fa-mobile-alt"></i>
+              </div>
+              <h4>web design</h4>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+            <!-- service item end -->
+            <!-- service item start -->
+          <div class="service-item">
+            <div class="service-item-inner padd-15">
+              <div class="icon">
+                <i class="fa fa-laptop-code"></i>
+              </div>
+              <h4>web design</h4>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+            <!-- service item end -->
+            <!-- service item start -->
+          <div class="service-item">
+            <div class="service-item-inner padd-15">
+              <div class="icon">
+                <i class="fa fa-palette"></i>
+              </div>
+              <h4>web design</h4>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+            <!-- service item end -->
+            <!-- service item start -->
+          <div class="service-item padd-15">
+            <div class="service-item-inner">
+              <div class="icon">
+                <i class="fa fa-code"></i>
+              </div>
+              <h4>web design</h4>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+            <!-- service item end -->
+            <!-- service item start -->
+          <div class="service-item padd-15">
+            <div class="service-item-inner">
+              <div class="icon">
+                <i class="fa fa-search"></i>
+              </div>
+              <h4>web design</h4>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+            <!-- service item end -->
+            <!-- service item start -->
+          <div class="service-item padd-15">
+            <div class="service-item-inner">
+              <div class="icon">
+                <i class="fa fa-bullhorn"></i>
+              </div>
+              <h4>web design</h4>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+            <!-- service item end -->
+        </div>
+      </div>
+    </section>
+    <!-- service section end -->
 </div>
   <!-- main content end -->
 </div>
