--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="row">
           <!-- service item start -->
           <div class="service-item">
-            <div class="service-item-inner padd-15">
+            <div class="service-item-inner">
               <div class="icon">
                 <i class="fa fa-mobile-alt"></i>
               </div>
@@ -232,7 +232,7 @@
             <!-- service item end -->
             <!-- service item start -->
           <div class="service-item">
-            <div class="service-item-inner padd-15">
+            <div class="service-item-inner">
               <div class="icon">
                 <i class="fa fa-laptop-code"></i>
               </div>
@@ -243,7 +243,7 @@
             <!-- service item end -->
             <!-- service item start -->
           <div class="service-item">
-            <div class="service-item-inner padd-15">
+            <div class="service-item-inner">
               <div class="icon">
                 <i class="fa fa-palette"></i>
               </div>
@@ -253,7 +253,7 @@
           </div>
             <!-- service item end -->
             <!-- service item start -->
-          <div class="service-item padd-15">
+          <div class="service-item">
             <div class="service-item-inner">
               <div class="icon">
                 <i class="fa fa-code"></i>
@@ -264,7 +264,7 @@
           </div>
             <!-- service item end -->
             <!-- service item start -->
-          <div class="service-item padd-15">
+          <div class="service-item">
             <div class="service-item-inner">
               <div class="icon">
                 <i class="fa fa-search"></i>
@@ -275,7 +275,7 @@
           </div>
             <!-- service item end -->
             <!-- service item start -->
-          <div class="service-item padd-15">
+          <div class="service-item">
             <div class="service-item-inner">
               <div class="icon">
                 <i class="fa fa-bullhorn"></i>
