--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </section>
     <!-- about section end -->
     <!-- service section start -->
-    <section class="service section">
+    <section class="service section hidden">
       <div class="container">
         <div class="row">
           <div class="section-title">
@@ -289,6 +289,17 @@
       </div>
     </section>
     <!-- service section end -->
+    <!-- portfolio section start -->
+    <section class="portfolio section">
+      <div class="container">
+        <div class="row">
+          <div class="section-title padd-15">
+            <h2>portfolio</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- portfolio section end -->
 </div>
   <!-- main content end -->
 </div>
