--- a/index.html
+++ b/index.html
@@ -297,6 +297,22 @@
             <h2>portfolio</h2>
           </div>
         </div>
+        <div class="row">
+          <div class="portfolio-heading">
+            <h2>My last Projects :</h2>
+          </div>
+        </div>
+        <div class="row">
+          <!-- portfolio item start -->
+          <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="" alt="">
+              </div>
+            </div>
+          </div>
+          <!-- portfolio item end -->
+        </div>
       </div>
     </section>
     <!-- portfolio section end -->
