--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="" alt="">
+                <img src="images/port" alt="">
               </div>
             </div>
           </div>
