--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     </section>
     <!-- service section end -->
     <!-- portfolio section start -->
-    <section class="portfolio section">
+    <section class="portfolio section hidden">
       <div class="container">
         <div class="row">
           <div class="section-title padd-15">
@@ -361,13 +361,53 @@
       </div>
     </section>
     <!-- portfolio section end -->
+    <!-- contact section start -->
+    <section class="contact section">
+      <div class="container">
+        <div class="row">
+          <div class="section-title padd-15">
+            <h2>Contact Me</h2>
+          </div>
+        </div>
+        <h3 class="contact-title">Have You Any Question ?</h3>
+        <h4 class="contact-sub-title">I'M AT YOUR SERVICE</h4>
+        <div class="row">
+          <!-- contact info item start-->
+          <div class="contact-info-item padd-15">
+            <div class="icon"><i class="fa fa-phone"></i></div>
+            <h4>Call Us On</h4>
+            <p>+0951 917 9743</p>
+          </div>
+          <!-- contact info item end -->
+           <!-- contact info item start-->
+           <div class="contact-info-item padd-15">
+            <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
+            <h4>office</h4>
+            <p>MCTI</p>
+          </div>
+          <!-- contact info item end -->
+           <!-- contact info item start-->
+           <div class="contact-info-item padd-15">
+            <div class="icon"><i class="fa fa-envelope"></i></div>
+            <h4>Email</h4>
+            <p>Thadzbayonito00.gmail.com</p>
+          </div>
+          <!-- contact info item end -->
+          <!-- contact info item start-->
+          <div class="contact-info-item padd-15">
+            <div class="icon"><i class="fa fa-globe"></i></div>
+            <h4>website</h4>
+            <p>www.domain.com</p>
+          </div>
+          <!-- contact info item end -->
+        </div>
+      </div>
+    </section>
+    <!-- contact section end -->
 </div>
   <!-- main content end -->
 </div>
 <!-- Main container end -->
-  
-
-
   <!-- JS Files -->
   <script src="js/script.js"></script>
 </body>
