--- a/index.html
+++ b/index.html
@@ -401,6 +401,8 @@
           </div>
           <!-- contact info item end -->
         </div>
+        <h3 class="contact-title">SEND ME AN EMAIL</h3>
+        <h4 class="contact-sub-title">I'M VERY RESPONSIVE TO MESSAGES</h4>
       </div>
     </section>
     <!-- contact section end -->
