--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- main content start -->
 <div class="main-content">
   <!-- home section start -->
-<section class="home section hidden">
+<section class="home section">
   <div class="container">
     <div class="row">
       <div class="home-info padd-15">
@@ -46,14 +46,14 @@
         <a href="#contact" class="btn hire-me"> Hire Me</a>
       </div>
       <div class="home-img padd-15">
-        <img src="./image/profile2.jpeg.jpg" alt="">
+        <img src="images/profile2.jpeg.jpg" alt="">
       </div>
     </div>
   </div>
 </section>
   <!-- home section end -->
     <!-- about section start -->
-    <section class="about section hidden">
+    <section class="about section">
       <div class="container">
         <div class="row">
           <div class="section-title padd-15">
@@ -211,7 +211,7 @@
     </section>
     <!-- about section end -->
     <!-- service section start -->
-    <section class="service section hidden">
+    <section class="service section">
       <div class="container">
         <div class="row">
           <div class="section-title">
@@ -290,7 +290,7 @@
     </section>
     <!-- service section end -->
     <!-- portfolio section start -->
-    <section class="portfolio section hidden">
+    <section class="portfolio section">
       <div class="container">
         <div class="row">
           <div class="section-title padd-15">
