--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             <div class="row">
               <div class="form-item col-6 padd-15">
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="name">
+                  <input type="text" class="form-control" placeholder="Name">
                 </div>
               </div>
               <div class="form-item col-6 padd-15">
