--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <!-- CSS Files -->
+  <!--======== CSS Files ========-->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/skins/color-1.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
-<!-- Main container start -->
+<!--======== Main container start ========-->
 <div class="main-container">
-  <!-- aside start -->
+  <!--======== aside start ========-->
   <div class="aside">
     <div class="logo">
       <a href="#"><span>t</span>hadz</a>
@@ -30,10 +30,10 @@
 
     </ul>
   </div>
-  <!-- aside end -->
-  <!-- main content start -->
+  <!--======== aside end ========-->
+  <!--======== main content start ========-->
 <div class="main-content">
-  <!-- home section start -->
+  <!--======== home section start ========-->
 <section class="home section">
   <div class="container">
     <div class="row">
@@ -51,8 +51,8 @@
     </div>
   </div>
 </section>
-  <!-- home section end -->
-    <!-- about section start -->
+  <!--======= home section end =======-->
+    <!--======= about section start =======-->
     <section class="about section">
       <div class="container">
         <div class="row">
@@ -141,7 +141,7 @@
                 <div class="row">
                   <div class="time-line-box padd-15">
                     <div class="timeline shadow-dark">
-                      <!-- timeline item -->
+                      <!--======= timeline item =======-->
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                           <h3 class="timeline-date">
@@ -175,7 +175,7 @@
                 <div class="row">
                   <div class="time-line-box padd-15">
                     <div class="timeline shadow-dark">
-                      <!-- timeline item -->
+                      <!--===== timeline item ======-->
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                           <h3 class="timeline-date">
@@ -209,8 +209,8 @@
         </div>
       </div>
     </section>
-    <!-- about section end -->
-    <!-- service section start -->
+    <!--======== about section end ========-->
+    <!--======== service section start ========-->
     <section class="service section">
       <div class="container">
         <div class="row">
@@ -219,7 +219,7 @@
           </div>
         </div>
         <div class="row">
-          <!-- service item start -->
+          <!--======== service item start ========-->
           <div class="service-item">
             <div class="service-item-inner">
               <div class="icon">
@@ -229,8 +229,8 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-            <!-- service item end -->
-            <!-- service item start -->
+            <!--======= service item end =======-->
+            <!--======= service item start =======-->
           <div class="service-item">
             <div class="service-item-inner">
               <div class="icon">
@@ -240,8 +240,8 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-            <!-- service item end -->
-            <!-- service item start -->
+            <!--======= service item end =======-->
+            <!--======= service item start =======-->
           <div class="service-item">
             <div class="service-item-inner">
               <div class="icon">
@@ -251,8 +251,8 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-            <!-- service item end -->
-            <!-- service item start -->
+            <!--======= service item end =======-->
+            <!--======= service item start =======-->
           <div class="service-item">
             <div class="service-item-inner">
               <div class="icon">
@@ -262,8 +262,8 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-            <!-- service item end -->
-            <!-- service item start -->
+            <!--======= service item end =======-->
+            <!--======= service item start =======-->
           <div class="service-item">
             <div class="service-item-inner">
               <div class="icon">
@@ -273,8 +273,8 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-            <!-- service item end -->
-            <!-- service item start -->
+            <!--======== service item end ========-->
+            <!--======== service item start ========-->
           <div class="service-item">
             <div class="service-item-inner">
               <div class="icon">
@@ -284,12 +284,12 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-            <!-- service item end -->
+            <!--========= service item end =========-->
         </div>
       </div>
     </section>
-    <!-- service section end -->
-    <!-- portfolio section start -->
+    <!--========= service section end =========-->
+    <!--========= portfolio section start =========-->
     <section class="portfolio section">
       <div class="container">
         <div class="row">
@@ -303,7 +303,7 @@
           </div>
         </div>
         <div class="row">
-          <!-- portfolio item start -->
+          <!--======== portfolio item start ========-->
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
@@ -311,8 +311,8 @@
               </div>
             </div>
           </div>
-          <!-- portfolio item end -->
-          <!-- portfolio item start -->
+          <!--======== portfolio item end ========-->
+          <!--======== portfolio item start ========-->
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
@@ -320,8 +320,8 @@
               </div>
             </div>
           </div>
-          <!-- portfolio item end -->
-          <!-- portfolio item start -->
+          <!--========= portfolio item end =========-->
+          <!--========= portfolio item start =========-->
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
@@ -329,8 +329,8 @@
               </div>
             </div>
           </div>
-          <!-- portfolio item end -->
-          <!-- portfolio item start -->
+          <!--========= portfolio item end =========-->
+          <!--========= portfolio item start =========-->
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
@@ -338,8 +338,8 @@
               </div>
             </div>
           </div>
-          <!-- portfolio item end -->
-          <!-- portfolio item start -->
+          <!--========= portfolio item end =========-->
+          <!--========= portfolio item start =========-->
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
@@ -347,8 +347,8 @@
               </div>
             </div>
           </div>
-          <!-- portfolio item end -->
-          <!-- portfolio item start -->
+          <!--======== portfolio item end ========-->
+          <!--======== portfolio item start ========-->
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
@@ -356,12 +356,12 @@
               </div>
             </div>
           </div>
-          <!-- portfolio item end -->
+          <!--======== portfolio item end ========-->
         </div>
       </div>
     </section>
-    <!-- portfolio section end -->
-    <!-- contact section start -->
+    <!--======== portfolio section end ========-->
+    <!--======== contact section start ========-->
     <section class="contact section">
       <div class="container">
         <div class="row">
@@ -372,38 +372,38 @@
         <h3 class="contact-title padd-15">Have You Any Question ?</h3>
         <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICE</h4>
         <div class="row">
-          <!-- contact info item start-->
+          <!--====== contact info item start ======-->
           <div class="contact-info-item padd-15">
             <div class="icon"><i class="fa fa-phone"></i></div>
             <h4>Call Us On</h4>
             <p>+0951 917 9743</p>
           </div>
-          <!-- contact info item end -->
-          <!-- contact info item start-->
+          <!--====== contact info item end======-->
+          <!--====== contact info item start======-->
           <div class="contact-info-item padd-15">
             <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
             <h4>office</h4>
             <p>MCTI</p>
           </div>
-          <!-- contact info item end -->
-          <!-- contact info item start-->
+          <!--======== contact info item end ========->
+          <!-======== contact info item start========-->
           <div class="contact-info-item padd-15">
             <div class="icon"><i class="fa fa-envelope"></i></div>
             <h4>Email</h4>
             <p>Thadzbayonito00.gmail.com</p>
           </div>
-          <!-- contact info item end -->
-          <!-- contact info item start-->
+          <!--======== contact info item end ========-->
+          <!--======== contact info item start========-->
           <div class="contact-info-item padd-15">
             <div class="icon"><i class="fa fa-globe"></i></div>
             <h4>website</h4>
             <p>www.domain.com</p>
           </div>
-          <!-- contact info item end -->
+          <!--========contact info item end ========-->
         </div>
         <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
         <h4 class="contact-sub-title padd-15">I'M VERY RESPONSIVE TO MESSAGES</h4>
-        <!-- contact form -->
+        <!--======== contact form ========-->
         <div class="row">
           <div class="contact-form padd-15">
             <div class="row">
@@ -440,12 +440,12 @@
         </div>
       </div>
     </section>
-    <!-- contact section end -->
+    <!--======== contact section end ========-->
 </div>
-  <!-- main content end -->
+  <!--======== main content end ========-->
 </div>
-<!-- Main container end -->
-  <!-- JS Files -->
+<!--======== Main container end========-->
+  <!--======== JS Files ========-->
   <script src="js/script.js"></script>
 </body>
 </html>
