--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/skins/color-1.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+  <link rel="stylesheet" href="css/style-switcher.css">
 </head>
 <body>
 <!--======== Main container start ========-->
@@ -445,6 +446,24 @@
   <!--======== main content end ========-->
 </div>
 <!--======== Main container end========-->
+<!-- ========styles switcher start======== -->
+    <div class="styles-switcher">
+    <div class="style-switcher-togller s-icon">
+      <i class="fas fab-cog fa-skin"></i>
+    </div>
+    <div class="day-night s-icon">
+      <i class="fas f-moon"></i>
+    </div>
+    <h4>Theme Colors</h4>
+    <div class="colors">
+      <span class="color-1" onclick="setActiveStyle('color-1')"></span>
+      <span class="color-2" onclick="setActiveStyle('color-2')"></span>
+      <span class="color-3" onclick="setActiveStyle('color-3')"></span>
+      <span class="color-4" onclick="setActiveStyle('color-4')"></span>
+      <span class="color-5" onclick="setActiveStyle('color-5')"></span>
+    </div>
+    </div>
+<!-- ========styles switcher end======== -->
   <!--======== JS Files ========-->
   <script src="js/script.js"></script>
 </body>
