--- a/index.html
+++ b/index.html
@@ -447,12 +447,12 @@
 </div>
 <!--======== Main container end========-->
 <!-- ========styles switcher start======== -->
-    <div class="styles-switcher">
-    <div class="style-switcher-togller s-icon">
-      <i class="fas fab-cog fa-skin"></i>
+    <div class="style-switcher">
+    <div class="style-switcher-toggler s-icon">
+      <i class="fas fa-cog fa-skin"></i>
     </div>
     <div class="day-night s-icon">
-      <i class="fas f-moon"></i>
+      <i class="fas fa-moon"></i>
     </div>
     <h4>Theme Colors</h4>
     <div class="colors">
