--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 <!-- ========styles switcher start======== -->
     <div class="style-switcher">
     <div class="style-switcher-toggler s-icon">
-      <i class="fas fa-cog fa-skin"></i>
+      <i class="fas fa-cog fa-spin"></i>
     </div>
     <div class="day-night s-icon">
       <i class="fas fa-moon"></i>
