--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/skins/color-1.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+  <!-- =======Stye Switcher======= -->
+  <link rel="stylesheet" href="css/skins/color-1.css" class="alternate-styles" title="color-1" disabled>
+  <link rel="stylesheet" href="css/skins/color-2.css" class="alternate-styles" title="color-2" disabled>
+  <link rel="stylesheet" href="css/skins/color-3.css" class="alternate-styles" title="color-3" disabled>
+  <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-styles" title="color-4" disabled>
+  <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-styles" title="color-5"disabled>
   <link rel="stylesheet" href="css/style-switcher.css">
 </head>
 <body>
