--- a/index.html
+++ b/index.html
@@ -473,5 +473,6 @@
   <!--======== JS Files ========-->
   <script src="js/script.js"></script>
 <script src="js/style-switcher.js"></script>
+<script src="./js/service-worker.js"></script>
 </body>
 </html>
