--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     <div class="logo">
       <a href="#"><span>t</span>hadz</a>
     </div>
-    <div class="nav-togler">
+    <div class="nav-toggler">
       <span></span>
     </div>
     <ul class="nav">
-<li><a href="#" class="active"><i class="fa fa-home"></i> Home</a></li>
-<li><a href="#"><i class="fa fa-user"></i>About</a></li>
-<li><a href="#"><i class="fa fa-list"></i>Service</a></li>
-<li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-<li><a href="#"><i class="fa fa-comments"></i>Contacts</a></li>
+<li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
+<li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+<li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
+<li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+<li><a href="#contacts"><i class="fa fa-comments"></i>Contacts</a></li>
 
     </ul>
   </div>
@@ -41,7 +41,7 @@
   <!--======== main content start ========-->
 <div class="main-content">
   <!--======== home section start ========-->
-<section class="home section">
+<section class="home section" id="home">
   <div class="container">
     <div class="row">
       <div class="home-info padd-15">
@@ -60,7 +60,7 @@
 </section>
   <!--======= home section end =======-->
     <!--======= about section start =======-->
-    <section class="about section">
+    <section class="about section" id="about">
       <div class="container">
         <div class="row">
           <div class="section-title padd-15">
@@ -218,7 +218,7 @@
     </section>
     <!--======== about section end ========-->
     <!--======== service section start ========-->
-    <section class="service section">
+    <section class="service section" id="services">
       <div class="container">
         <div class="row">
           <div class="section-title">
@@ -297,7 +297,7 @@
     </section>
     <!--========= service section end =========-->
     <!--========= portfolio section start =========-->
-    <section class="portfolio section">
+    <section class="portfolio section" id="portfolio">
       <div class="container">
         <div class="row">
           <div class="section-title padd-15">
@@ -369,7 +369,7 @@
     </section>
     <!--======== portfolio section end ========-->
     <!--======== contact section start ========-->
-    <section class="contact section">
+    <section class="contact section" id="contacts">
       <div class="container">
         <div class="row">
           <div class="section-title padd-15">
@@ -471,6 +471,7 @@
     </div>
 <!-- ========styles switcher end======== -->
   <!--======== JS Files ========-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
   <script src="js/script.js"></script>
   <script src="js/style-switcher.js"></script>
 </body>
