--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           I'm a <span class="typing"> web designer</span>
         </h3>
         <p>I'm a web designer with experience for 1 year. my expertise is t create and design website. graphic design and many more...</p>
-        <a href="#contact" class="btn hire-me"> Hire Me</a>
+        <a href="#contact" class="btn"> Download CV</a>
       </div>
       <div class="home-img padd-15">
         <img src="images/profile2.jpeg.jpg" alt="">
@@ -104,8 +104,7 @@
               </div>
               <div class="row">
                 <div class="buttons padd-15">
-                  <a href="#" class="btn">Download CV</a>
-                  <a href="#contact" class="btn hire-me">Hire Me</a>
+                  <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                 </div>
               </div>
             </div>
