--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h3 class="my-professsion">
           I'm a <span class="typing"> web designer</span>
         </h3>
-        <p>I'm a web designer with experience for 1 year. my expertise is t create and design website. graphic design and many more...</p>
+        <p>I'm a web designer with experience for 1 year. my expertise is to create and design website. graphic design and many more...</p>
         <a href="#contact" class="btn"> Download CV</a>
       </div>
       <div class="home-img padd-15">
@@ -143,7 +143,7 @@
             </div>
             <div class="row">
               <div class="education padd-15">
-                <h3 class="title">education</h3>
+                <h3 class="title">EDUCATION</h3>
                 <div class="row">
                   <div class="time-line-box padd-15">
                     <div class="timeline shadow-dark">
@@ -151,33 +151,33 @@
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                           <h3 class="timeline-date">
-                            <i class="fa fa-calendar"> 2022 - present</i>
+                            <i class="fa fa-calendar"> 2022 - Present</i>
                           </h3>
-                          <h4 class="timeline-title">Master in Computer Science</h4>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, vero ut, veritatis quae laborum eligendi officiis commodi est nobis expedita tempore dolorem numquam explicabo voluptate deserunt, ea nulla quos iste!</p>
+                          <h4 class="timeline-title">Web Developer NC III-MCTI-TESDA</h4>
+                          <p>This course designed to delovep & enhance the knowledge,skills & attitudes of a Web Development in accordance with web development industry stantards. The nominal duration of 1188 hours covers the required units at Web Development NC-III</p>
                       </div>
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                           <h3 class="timeline-date">
-                            <i class="fa fa-calendar"> 2022 - present</i>
+                            <i class="fa fa-calendar"> 2022 - Present</i>
                           </h3>
-                          <h4 class="timeline-title">Master in Computer Science</h4>
-                          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum nam magnam eaque incidunt vero, eum doloremque maiores vel consequatur saepe quisquam et praesentium ipsum ullam dolorem aliquid rerum consequuntur quidem!</p>
+                          <h4 class="timeline-title">Data Associate/Data Engineer-Project Sparta Scholars</h4>
+                          <p>Project SPARTA was launched in order to put in place the necessary online education, research and development mechanisms and infrastructure to not only enable the industry of data science and analytics but also to advance smart governance practices. It aims to train and graduate 30,000 learners in data science, analytics, and related fields through online learning.</p>
                       </div>
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                           <h3 class="timeline-date">
-                            <i class="fa fa-calendar"> 2022 - present</i>
+                            <i class="fa fa-calendar">  2022 - Present</i>
                           </h3>
-                          <h4 class="timeline-title">Master in Computer Science</h4>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ad pariatur eum quae voluptatem eos, nemo repellat ratione veritatis. Nihil recusandae itaque eos quibusdam nesciunt laborum excepturi illum harum aut!</p>
+                          <h4 class="timeline-title">Massive Open Distance eLearning (MODeL)</h4>
+                          <p>The University of the Philippines - Open University (UPOU) pioneered in online teaching and learning and continues to play a leading role in the study and practice of open learning and distance education in the Philippines.</p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="experience padd-15">
-                <h3 class="title">experience</h3>
+                <h3 class="title">EXPERIENCE</h3>
                 <div class="row">
                   <div class="time-line-box padd-15">
                     <div class="timeline shadow-dark">
@@ -185,26 +185,25 @@
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                           <h3 class="timeline-date">
-                            <i class="fa fa-calendar"> 2022 - present</i>
+                            <i class="fa fa-calendar"> 2021-2022</i>
                           </h3>
-                          <h4 class="timeline-title">Master in Computer Science</h4>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, vero ut, veritatis quae laborum eligendi officiis commodi est nobis expedita tempore dolorem numquam explicabo voluptate deserunt, ea nulla quos iste!</p>
+                          <h4 class="timeline-title">Online Sales Representative-OSC Online Shopping</h4>
+                          <p>I work as an Online Sales Rep. in OSC Shopping for almost 3 months as a non-voice online seller at facebook market place</p>
                       </div>
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                           <h3 class="timeline-date">
-                            <i class="fa fa-calendar"> 2022 - present</i>
+                            <i class="fa fa-calendar"> 2014-2019</i>
                           </h3>
-                          <h4 class="timeline-title">Master in Computer Science</h4>
-                          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum nam magnam eaque incidunt vero, eum doloremque maiores vel consequatur saepe quisquam et praesentium ipsum ullam dolorem aliquid rerum consequuntur quidem!</p>
+                          <h4 class="timeline-title">Administrative Assistant IV-City Government of Muntinlupa</h4>
+                          <p>I work as Admninistrative Assistant thru Youth Affairs and Sports Development office as Sports Admin for almost 5 years</p>
                       </div>
                       <div class="timeline-item">
                         <div class="circle-dot"></div>
                           <h3 class="timeline-date">
-                            <i class="fa fa-calendar"> 2022 - present</i>
+                            <i class="fa fa-calendar"> 2012 - 2013</i>
                           </h3>
-                          <h4 class="timeline-title">Master in Computer Science</h4>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ad pariatur eum quae voluptatem eos, nemo repellat ratione veritatis. Nihil recusandae itaque eos quibusdam nesciunt laborum excepturi illum harum aut!</p>
+                          <h4 class="timeline-title">Kawasaki Motors. Corp.-Production Worker</h4>
                       </div>
                     </div>
                   </div>
@@ -231,8 +230,8 @@
               <div class="icon">
                 <i class="fa fa-mobile-alt"></i>
               </div>
-              <h4>web design</h4>
-              <p>Lorem ipsum dolor sit amet.</p>
+              <h4>App design</h4>
+              <p>Build the Apps Your Business Needs To Succeed with the Salesforce Platform. To Empower Everyone</p>
             </div>
           </div>
             <!--======= service item end =======-->
@@ -242,8 +241,9 @@
               <div class="icon">
                 <i class="fa fa-laptop-code"></i>
               </div>
-              <h4>web design</h4>
-              <p>Lorem ipsum dolor sit amet.</p>
+              <h4>Web Design</h4>
+              <p>“We make your website work for you”</p>
+                <p>“Web development and design that gets results”</p>
             </div>
           </div>
             <!--======= service item end =======-->
@@ -253,8 +253,9 @@
               <div class="icon">
                 <i class="fa fa-palette"></i>
               </div>
-              <h4>web design</h4>
-              <p>Lorem ipsum dolor sit amet.</p>
+              <h4>Web Design</h4>
+              <p>It’s not just about the domain, it’s also about your business!</p>
+              <p>“Web development and design that gets results”</p>
             </div>
           </div>
             <!--======= service item end =======-->
@@ -264,8 +265,8 @@
               <div class="icon">
                 <i class="fa fa-code"></i>
               </div>
-              <h4>web design</h4>
-              <p>Lorem ipsum dolor sit amet.</p>
+              <h4>Web Design</h4>
+              <p>“Our sites are designed to be easy-to-use and mobile friendly”</p>
             </div>
           </div>
             <!--======= service item end =======-->
@@ -275,8 +276,9 @@
               <div class="icon">
                 <i class="fa fa-search"></i>
               </div>
-              <h4>web design</h4>
-              <p>Lorem ipsum dolor sit amet.</p>
+              <h4>Web Design</h4>
+              
+              <p>“If you have a project, we’ve got the right solution for you.”</p>
             </div>
           </div>
             <!--======== service item end ========-->
@@ -286,8 +288,9 @@
               <div class="icon">
                 <i class="fa fa-bullhorn"></i>
               </div>
-              <h4>web design</h4>
-              <p>Lorem ipsum dolor sit amet.</p>
+              <h4>Web Design</h4>
+              <p>“It’s all about the experience”</p>
+              <p>“The web is our playground.”</p>
             </div>
           </div>
             <!--========= service item end =========-->
@@ -313,7 +316,7 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio-1.jpg" alt="">
+                <img src="images/certificate.jpg" alt="">
               </div>
             </div>
           </div>
@@ -322,7 +325,7 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio-2.jpg" alt="">
+                <img src="images/Certificate_for_Introduction_to_Logic_(June_2022)-CA_18926 (1)1024_1.jpg" alt="">
               </div>
             </div>
           </div>
@@ -331,7 +334,7 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio-3.jpg" alt="">
+                <img src="images/certificate-sparta-analytics1024_1.jpg" alt="">
               </div>
             </div>
           </div>
@@ -340,7 +343,7 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio-4.jpg" alt="">
+                <img src="images/Certificate_for_Business_Analytics_Concepts_and_Frameworks_(July_2022)-CA_19571.jpg" alt="">
               </div>
             </div>
           </div>
