--- a/index.html
+++ b/index.html
@@ -358,7 +358,25 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/sparta11024_1.jpg" alt="">
+                <img src="images/excelskills.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <!--======== portfolio item end ========-->
+           <!--========= portfolio item start =========-->
+           <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="images/sql.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <!--======== portfolio item end ========-->
+           <!--========= portfolio item start =========-->
+           <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="images/data governance.png" alt="">
               </div>
             </div>
           </div>
@@ -367,7 +385,7 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio-6.jpg" alt="">
+                <img src="images/excelskills.jpg" alt="">
               </div>
             </div>
           </div>
