--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/excelskills.jpg" alt="">
+                <img src="images/sparta11024_1.jpg" alt="">
               </div>
             </div>
           </div>
