--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>Enthusiastic Self Taught Web Developer from the City of Muntinlupa, with 6 months of experience in web development and design and a Certifacte holder of Web Development NC-III.
         </p>
           <p>Obtained other Certification from the Project Sparta of Department of Information and Communications Technology and The University of the Philippines - Open University (UPOU). Looking to deliver excellent web development skills using Html,Css and JavaScript with other known Framweworks and by Seeking to further improve skills as the future front-end Web Developer at your Company. </p>
-        <a href="#contact" class="btn"> Download CV</a>
+        <a href="images/inbound1862893640259465150 (1).pdf" class="btn" download="Thadz-CV"> Download CV</a>
       </div>
       <div class="home-img padd-15">
         <img src="images/profile2.jpeg.jpg" alt="">
@@ -465,7 +465,7 @@
                 </div>
               </div>
             </div><div class="row">
-              <div class="form-item col-12 padd-15">
+              <div class="form-item col-12 padd-15" onsubmit="sendEmail(); reset(); return false">
                 <button type="submit" class="btn">Send Messages</button>
               </div>
             </div>
@@ -504,5 +504,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
   <script src="js/script.js"></script>
   <script src="js/style-switcher.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 </html>
